# serialport-tools

./: CMakeLists.txt  README.md  serialport-list.c  serialport-pipe.c  shared.c  shared.h
